--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Your Name</title>
-    <link rel="stylesheet" href="/styles.css" />
-  </head>
-  <body>
-    <h1>Your Name</h1>
-    <p>Short intro goes here.</p>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Your Name</title>
+  <link rel="stylesheet" href="/styles.css" />
+</head>
+
+<body>
+  <h1>Hi and welcome!</h1>
+  <p>I'm Jan and I'm very happy that you happened to stumble on this little piece of Internet property where
+    I can share my thoughts and ideas without being tied to a specific platform. Indeed, personal websites are cool
+    again
+    and since I quite enjoy reading other people's websites I decided to make my own.</p>
+</body>
+
 </html>
