Add what am I working on section on main page

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,27 @@
       again
       and since I quite enjoy reading other people's websites I decided to make my own.</p>
 
+    <h2>What I am currently working on</h2>
+    <p>
+      Currently I spend my time at work thinking about the architecture of our ServiceNow platform, including adding
+      features to improve productivity
+      as well as creating new value for our internal and external customers. In addition to that I am trying to bring to
+      life CSDM
+      (Common Service Data Model)
+      in our business and apply it best to our very tricky specifics of a private provider of managed services.
+    </p>
+    <p>
+      I am also a solution architect for <a href="https://dynamo-pcp.eu/pcp-phases/phase-3/pathfinder/">PATHFINDER</a>
+      which is a business continuity solution for the health and care sector. Its main goal is to help organizations
+      keep essential services operational during system shocks and unpredictable events (e.g. pandemic, heatwave, or
+      staff shortage).
+    </p>
+    <p>
+      In personal life I spend a lot of time learning new things, practicing and improving my French, and trying to do
+      more DIY things (especially self-hosting and development).
+    </p>
+
+
     <h2>Posts</h2>
     <ul>
       {% for post in collections.posts %}
