--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,9 @@
     <h2>Posts</h2>
     <ul>
       {% for post in collections.posts %}
-      <li><a href="{{ post.url }}">{{ post.data.title }}</a></li>
+      <li><a href="{{ post.url }}">{{ post.data.title }}</a>
+        <small>({{ post.data.date | readableDate}})</small>
+      </li>
       {% endfor %}
     </ul>
   </main>
