Add github and linkedin links

--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,12 @@
       </li>
       {% endfor %}
     </ul>
+
+    <h2>Links</h2>
+    <ul>
+      <li><a href="https://github.com/janujcic" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+      <li><a href="https://www.linkedin.com/in/jan-ujcic" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+    </ul>
   </main>
 </body>
 
