Add metatag for Bing index

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="msvalidate.01" content="8C5F40739773AEA60446E4FEB035701E" />
   <title>Jan Ujcic</title>
   <link rel="icon" href="/favicon.png" type="image/png" />
   <link rel="stylesheet" href="/styles.css" />
