Add logo top right to return to main page

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+  <a class="site-logo" href="/" aria-label="Go to home page">
+    <img src="/favicon.png" alt="Jan Ujcic logo" width="28" height="28" />
+  </a>
   <main>
     <h1>Hi and welcome!</h1>
     <p>I'm Jan and I'm very happy that you happened to stumble on this little piece of Internet property where
